--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
-
+    <div class="container">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Enter a number to convert it to roman numerals</h3>
+        </div>
+        <div class="panel-body">
+          <form id="form">
+            <label for="enterNumber"></label>
+            <input type="text" id="enterNumber">
+            <button class="btn btn-primary" type="submit" name="button">Sumbit</button>
+          </form>
+          <div class="answer">
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
